[package]
name = "Occlum"
version = "0.0.1"

[lib]
name = "occlum_rs"
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.1"
log = "0.4"
spin = "0.5"
lazy_static = { version = "1.3.0", features = ["spin_no_std"] } # Implies nightly
derive_builder = "0.7.2"
rcore-fs = { path = "../../deps/sefs/rcore-fs" }
rcore-fs-sefs = { path = "../../deps/sefs/rcore-fs-sefs" }
xmas-elf = { path = "../../deps/xmas-elf" }
sgx_types = "=1.0.6"
sgx_trts = "=1.0.6"
sgx_tprotected_fs = "=1.0.6"
sgx_tstd = "=1.0.6"

[features]
default = ["integrity_only_opt", "sgx_file_cache"]
syscall_timing = []     # Timing for each syscall. But it has cost from more ocall.
integrity_only_opt = [] # Clear bss only. It should be disabled if checking memory reads.
sgx_file_cache = []     # Cache SgxFile objects. Invalidation is unimplemented.
